--- a/public/Login.html
+++ b/public/Login.html
@@ -47,7 +47,7 @@
             const password = form.email.value
             
             try{
-                const res = fetch('http://localhost:3000/login', {
+                const res = await fetch('http://localhost:3000/login', {
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify({email, password}),
                     method: 'POST'
